更新面向对象.md

--- a/note/面向对象.md
+++ b/note/面向对象.md
@@ -1,7 +1,3 @@
-<div style="text-align:center">
-    <img src="images\数组内存图.png" alt="数组分配">
-</div>
-
 ### 面向对象
 
 #### 一、类和对象
@@ -94,7 +90,7 @@
            ...
        }
        //带参构造，在创建对象时，同时可以为对象进行赋值
-       public ClassName(){
+       public ClassName(参数列表)
            ...
        }
    }
@@ -116,4 +112,47 @@
 
      如果定义了带参的构造方法，还要使用无参构造方法，可以使用重载特性
 
-     
+#### 四、标准JavaBean
+
+1. 类名需要见名知意
+
+2. 成员变量使用private修饰
+
+3. 提供至少两个构造方法
+
+   + 无参构造方法
+   + 带全部参数的构造方法
+
+4. get和set方法
+
+   提供每一个成员变量对应的setXxx()/getXxx()
+
+   如果还有其他行为，也需要写上
+
+#### 五、对象内存图
+
+1. 单个对象内存图
+
+<div style="text-align:center">
+    <img src="images\单个对象内存图.png" alt="单个对象">
+</div>
+
+2. 多个对象内存图
+
+   <div style="text-align:center">
+       <img src="images\两个对象内存图.png" alt="两个对象">
+   </div>
+
+#### 六、this的内存原理
+
+**本质：所在方法调用者的地址值**
+
+<div style="text-align:center">
+    <img src="images\this内存图.png" alt="this内存图">
+</div>
+
+#### 七、成员变量与局部变量
+
+<div style="text-align:center">
+    <img src="images\成员变量与局部变量.png" alt="变量">
+</div>
